syntax_error_v318.txt
d:\Downloads\DeskShare\js\chat-manager.js:696
await this.sendMiniMessage(user.id, text, fileUrl, fileType);
^^^^^

SyntaxError: await is only valid in async functions and the top level bodies of modules
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.20.0
